--- a/src/main/webapp/styles/crud.css
+++ b/src/main/webapp/styles/crud.css
@@ -133,7 +133,7 @@ select{
 }
 
 .add-btn {
-    background: #9c27b0;
+    background: #B94CD5;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -276,7 +276,7 @@ tbody td.actions img:hover {
     .hamburger div {
         width: 100%;
         height: 4px;
-        background-color: #9c27b0;
+        background-color: #B94CD5;
         border-radius: 2px;
     }
 
@@ -293,7 +293,7 @@ tbody td.actions img:hover {
         right: 15px;
         font-size: 28px;
         text-decoration: none;
-        color: #9c27b0;
+        color: #B94CD5;
         background-color: #ffffff;
         display: flex;
         align-items: center;
