--- a/src/main/webapp/styles/login.css
+++ b/src/main/webapp/styles/login.css
@@ -7,7 +7,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    color: #9c27b0;
+    color: #B94CD5;
 }
 
 /* ============ CONTAINERS ============ */
@@ -26,13 +26,13 @@ body {
 .logo {
     font-size: 2.5rem;
     font-weight: 700;
-    color: #9c27b0;
+    color: #B94CD5;
     margin-bottom: 10px;
 }
 
 .subtitulo {
     font-size: 1.2rem;
-    color: #9c27b0;
+    color: #B94CD5;
     margin-bottom: 30px;
     font-weight: 500;
 }
@@ -62,7 +62,7 @@ body {
 
 .form-group input:focus {
     outline: none;
-    border-color: #9c27b0;
+    border-color: #B94CD5;
 }
 
 /* Campos combinados (ex: CPF + seletor) */
@@ -94,7 +94,7 @@ body {
 .btn-cadastro {
     width: 100%;
     padding: 15px;
-    background-color: #9c27b0;
+    background-color: #B94CD5;
     color: #fff;
     border: none;
     border-radius: 10px;
@@ -106,7 +106,7 @@ body {
 
 .btn-login:hover,
 .btn-cadastro:hover {
-    background-color: #7d52cc;
+    background-color: #B94CD5;
 }
 
 /* ============ LINKS ============ */
@@ -115,7 +115,7 @@ body {
 .link-senha {
     display: block;
     margin-top: 15px;
-    color: #9c27b0;
+    color: #754EA0;
     font-weight: 500;
     text-decoration: none;
 }
